name          : hsini
version       : 0.0.0
license       : BSD3
license-file  : COPYING
author        : Magnus Therning
maintainer    : magnus@therning.org
copyright     : Magnus Therning, 2010
synopsis      : Package for user configuration files (INI)
description   : None yet
build-type    : Simple
category      : Network
cabal-version : >= 1.2

flag Test
    description : Enable building of tests
    default     : False

library
    hs-source-dirs : src
    build-depends : base, containers
    exposed-modules : Data.Ini Data.Ini.Types

Executable initest
    main-is        : IniTest.hs
    hs-source-dirs : tst, src
    if flag(Test)
        build-depends  : smallcheck
        buildable : True
        ghc-options    : -fhpc
    else
        buildable : False
