name          : hsini
version       : 0.0.0
license       : BSD3
license-file  : COPYING
author        : Magnus Therning
maintainer    : magnus@therning.org
copyright     : Magnus Therning, 2010
synopsis      : Package for user configuration files (INI)
description   : None yet
build-type    : Simple
category      : Network
cabal-version : >= 1.6

flag Test
    description : Enable building of tests
    default     : False

library
    hs-source-dirs : src
    build-depends : base, containers, parsec ==2.1.*, monads-fd
    exposed-modules : Data.Ini Data.Ini.Types Data.Ini.Reader
    other-modules : Data.Ini.Reader.Internals

Executable test
    main-is : Main.hs
    hs-source-dirs : tst, src
    other-modules : Ini ReaderI
    if flag(Test)
        build-depends : HUnit, test-framework, test-framework-hunit,
            test-framework-quickcheck2, test-framework-th, QuickCheck
        buildable : True
        ghc-options : -fhpc
    else
        buildable : False
