name          : hsini
version       : 0.1.999
license       : BSD3
license-file  : LICENSE
author        : Magnus Therning
maintainer    : magnus@therning.org
copyright     : Magnus Therning, 2010
synopsis      : Package for user configuration files (INI)
description   : None yet
build-type    : Custom
category      : Network
cabal-version : >= 1.6

source-repository head
    type     : git
    location : https://github.com/magthe/hsini.git

flag Test
    description : Enable building of tests
    default     : False

library
    hs-source-dirs  : src
    build-depends   : base >=4.2 && <4.7, bytestring >=0.9 && <0.11,
        containers >=0.3 && <0.6, mtl >=2.0 && <2.2, parsec ==3.1.*
    exposed-modules : Data.Ini Data.Ini.Types Data.Ini.Reader
    other-modules   : Data.Ini.Reader.Internals

executable tests
    main-is        : Main.hs
    hs-source-dirs : tst, src
    other-modules  : Ini ReaderI
    if flag(Test)
        build-depends : HUnit, test-framework, test-framework-hunit, test-framework-quickcheck2, test-framework-th, QuickCheck
        buildable     : True
        -- ghc-options   : -fhpc
    else
        buildable     : False
